# dx12-framework

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  codegen.yaml  imgui.ini  imgui_fullscreen.ini  repomix.config.json
app/: CMakeLists.txt  main.cpp
app/Application/: Application.h
app/Framework/: CMakeLists.txt
app/Framework/Core/: types.h  utils.h
app/Framework/Event/: event_system.h  event_types.h  input_event_generator.h  input_events.h
app/Framework/Font/: bmfont_parser.cpp  text_layout.h
app/Framework/Input/: gamepad.h  gamepad_handler.h  input.h  keyboard.h  keyboard_handler.h  mouse.h  mouse_handler.h
app/Game/: CMakeLists.txt  game.cpp  game.h  game_context.h  game_object.cpp  game_object.h  scene.cpp  scene.h
app/Game/Asset/: asset_manager.cpp  asset_manager.h
app/Game/Component/: animated_sprite.cpp  animated_sprite.h  billboard_helper.h  billboard_type.h  camera_component.cpp  camera_component.h  component.h  free_camera_controller.cpp  mesh_renderer.h  pivot_type.cpp  render_settings.h  sprite_renderer.cpp  sprite_renderer.h  sprite_sheet_helper.h  text_renderer.cpp  text_renderer.h  transform_component.cpp  transform_component.h
app/Game/Debug/: debug_drawer.h
app/Game/Event/: event.h
app/Graphic/: CMakeLists.txt  buffer.h  depth_buffer.cpp  depth_buffer.h  descriptor_heap_allocator.cpp  descriptor_heap_allocator.h  descriptor_heap_manager.cpp  descriptor_heap_manager.h  fence_manager.cpp  fence_manager.h  frame_packet.h  gpu_resource.cpp  graphic.cpp  graphic.h  mesh.cpp  mesh.h  per_frame_constant_buffer.h  pipeline_state_builder.h  render_command_list.h  render_frame_context.h  render_pass_manager.cpp  render_pass_manager.h  render_world.h  root_signature_builder.cpp  root_signature_builder.h  sampler_builder.cpp  sampler_builder.h  swapchain_manager.cpp  swapchain_manager.h  ui_pass.cpp  ui_pass.h  ui_renderer.cpp  ui_renderer.h
app/Graphic/Command/: buffer.h  render_command_list.cpp  render_command_list.h
app/Graphic/Debug/: debug_line_renderer.cpp
app/Graphic/Descriptor/: descriptor_heap_manager.cpp  descriptor_heap_manager.h
app/Graphic/Frame/: camera_data.h  constant_buffers.h  dynamic_upload_buffer.h  frame_packet.h  render_frame_context.h
app/Graphic/Pipeline/: material.h  material_manager.cpp  material_manager.h  pipeline_state_builder.cpp  pipeline_state_builder.h  root_parameter_slots.h  root_signature_builder.h  shader_config.h  shader_manager.cpp  shader_manager.h  shader_metadata.cpp  shader_metadata.h  shader_types.h
app/Graphic/Presentation/: depth_buffer.h  hdr_render_target.cpp
app/Graphic/Render/: debug_pass.cpp  material_renderer.cpp  material_renderer.h  opaque_pass.cpp  opaque_pass.h  opaque_renderer.cpp  opaque_renderer.h  render_pass.h  render_pass_manager.cpp  render_pass_manager.h  transparent_pass.cpp  transparent_pass.h  ui_pass.cpp  ui_pass.h  ui_renderer.cpp  ui_renderer.h
app/Graphic/Rendering/: hdr_config.h
app/Graphic/Resource/: mesh.h  mesh_factory.h
app/Graphic/Texture/: texture.h  texture_manager.cpp  texture_manager.h
src/: CMakeLists.txt  main.cpp
src/Application/: Application.cpp  Application.h  app_config.h  config_loader.cpp  config_loader.h  timer_updater.cpp  timer_updater.h
src/Editor/: CMakeLists.txt  editor_hierarchy.cpp  editor_layer.cpp  editor_layer.h  editor_scene.cpp  editor_settings.cpp  editor_ui_imgui.cpp  editor_viewport.cpp
src/Framework/: CMakeLists.txt
src/Framework/Asset/: asset_manager.cpp  asset_manager.h  font_service.h  mesh_service.h  model_data.h  text_mesh_handle.h  texture_service.h
src/Framework/Core/: color.h  utils.h
src/Framework/Editor/: editor_ui.h  render_inspector.h
src/Framework/Error/: framework_bootstrap_log.cpp  framework_bootstrap_log.h
src/Framework/Event/: cancellation_token.hpp  coro_task.hpp  event.hpp  event_bus.cpp  event_bus.hpp  event_scope.hpp  event_types.h  input_event_generator.h  input_events.h  subject_id.hpp  task.hpp  task_awaiter.hpp  task_extensions.hpp  thread_pool.hpp  timeout_guard.hpp
src/Framework/Font/: bmfont_parser.h  font_family.h  font_registry.cpp  font_registry.h  font_types.h  text_layout.cpp  text_layout.h  text_layout_data.h
src/Framework/Handle/: handle.h
src/Framework/Input/: gamepad_handler.h  input.h  keyboard_handler.h  mouse.h  mouse_handler.h
src/Framework/Logging/: logger.cpp  logger.h  logger_config.h  sinks.h
src/Framework/Math/: Math.cpp  Math.h  README.md  unit_circle_lut.h
src/Framework/Model/: model_concepts.h  model_data.h  model_loader.h  model_types.h  node_hierarchy.h
src/Framework/ProceduralTexture/: procedural_texture_factory.h
src/Framework/Render/: billboard_type.h  camera_data.h  debug_draw_service.h  frame_packet.h  instance_data.h  material_descriptor.h  mesh_data.h  mesh_data_factory.cpp  mesh_data_factory.h  render_handles.h  render_request.h  render_service.h  render_settings.h  render_types.h  shader_ids.h  shader_name_service.h  shader_types.h  shadow_config.h  texture_handle.h  vertex_data.h
src/Framework/Serialize/: serialize_document.cpp  serialize_document.h  serialize_node.cpp  serialize_node.h  serialize_node_impl.h
src/Framework/Shader/: default_shaders.h  shader_descriptor.h  shader_id.h  shader_registration.h  vertex_format.h  vertex_shaders.h
src/Framework/UUID/: uuid.h
src/Framework/Utils/: file_scanner.h  path_utils.h
src/Game/: CMakeLists.txt  README.md  game.cpp  game.h  game_context.h  game_object.cpp  game_object.h  play_state.h  scene.cpp  scene.h  scene_defaults.h  scene_events.h  scene_id.h  scene_key.cpp  scene_key.h  scene_manager.cpp  scene_manager.h
src/Game/Asset/: asset_handle.h  asset_manager.cpp  asset_manager.h  model_data.h  text_mesh_handle.h
src/Game/Component/: behavior_component.h  billboard_helper.h  camera_component.cpp  camera_component.h  component.cpp  (+28 more)
src/Graphic/: CMakeLists.txt  debug_draw_service.cpp  debug_draw_service.h  graphic.cpp  graphic.h  render_service.cpp  render_service.h
src/SceneContent/: CMakeLists.txt  scene_registration.cpp  scene_registration.h
(+405 files in other folders)
